Update api docs
